# arbitrage-bot

./: .gitignore  CMakeLists.txt  README.md
include/arbitrage/: BinanceClient.hpp  Detector.hpp  KuCoinClient.hpp
include/trading/: Asset.hpp  Exchange.hpp  OrderBook.hpp  OrderType.hpp  Strategy.hpp
include/trading/strategy/: TwofoldArbiStrat.hpp
include/utils/: Heap.hpp  MaxHeap.hpp  MinHeap.hpp  RClient.hpp  UtilLib.hpp  WSClient.hpp
src/: BinanceClient.cpp  CMakeLists.txt  Detector.cpp  Exchange.cpp  KuCoinClient.cpp  OrderBook.cpp  RClient.cpp  TwofoldArbiStrat.cpp  WSClient.cpp
test/: CMakeLists.txt  main.cpp
